# spirsa

./: .env.example  .gitignore  MODERNIZATION_PLAN.md  README.md  deno.json  docker-compose.yml  makefile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_prod.txt  webpack-stats-prod.json  webpack-stats.json  webpack.dev.js  webpack.prod.js
.github/workflows/: ci.yml
art/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
art/migrations/: 0001_initial.py  0002_artworkdetail.py  0002_auto_20201022_1414.py  0003_auto_20201029_1748.py  0004_auto_20201029_1910.py  0005_auto_20201031_0953.py  0006_auto_20201103_1104.py  0007_auto_20201106_2008.py  0008_auto_20201108_1101.py  0009_auto_20201109_2319.py  0010_artwork_is_featured.py  0011_auto_20220314_1854.py  0012_auto_20220611_2144.py  0013_alter_collection_options_collection_ordering_and_more.py  0014_alter_artwork_options_alter_collection_options_and_more.py  0015_sortable_ordering.py  0016_invert_ordering_values.py  0017_label_artworkthumbnail_label.py  0018_migrate_titles_to_labels.py  0019_remove_artworkthumbnail_title.py
art/templatetags/: art_tags.py
deploy/: Caddyfile  spirsa.service
spirsa/: admin.py  apps.py  asgi.py  constants.py  mixins.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
spirsa/migrations/: 0001_initial.py  0002_auto_20201022_1414.py  0002_auto_20201027_1441.py  0002_auto_20201027_1740.py  0003_abountcontactinformation.py  0003_auto_20201029_1904.py  (+2 more)
static/css/: styles.css
templatetags/: spirsa.py
(+42 files in other folders)
